tests/lit/syntax/error_arrayreturn.silly
// RUN: cd %S
// RUN: %Not %ExeSilly --no-verbose-parse-error -g error_arrayreturn.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_arrayreturn.silly:16:24: error: parse error
// CHECK:    16 | FUNCTION foo( ) : INT32[4]
// CHECK:       |                        ^
// CHECK: error_arrayreturn.silly:20:5: error: parse error
// CHECK:    20 |     RETURN r;
// CHECK:       |     ^
// CHECK: error_arrayreturn.silly:20:13: error: parse error
// CHECK:    20 |     RETURN r;
// CHECK:       |             ^
// CHECK: error_arrayreturn.silly:21:1: error: parse error
// CHECK:    21 | };
// CHECK:       | ^

FUNCTION foo( ) : INT32[4]
{
    INT32 r[4];

    RETURN r;
};
